--- a/styles/bar/_weather.scss
+++ b/styles/bar/_weather.scss
@@ -10,14 +10,9 @@ bar-weather {
   color: $text;
   padding-left: 0px;
   padding-right: 15px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  margin-top: -8px;
-  margin-bottom: -8px;
 }
 
 bar-weather-icon {
-  margin-top: 0px;
   font-size: 16px;
   font-weight:900;
   color: $text;
