--- a/styles/modules-center/_modulesCenter.scss
+++ b/styles/modules-center/_modulesCenter.scss
@@ -8,7 +8,7 @@ modules-center-container {
   padding: 20px;
 }
 
-date-time-container {
+date-time-weather-container {
   background-color: $mantle-transparent;
   border: 2px solid $surface2;
   border-radius: $border-radius;
@@ -113,7 +113,7 @@ detail-calendar grid label {
   color: $overlay0;
   font-size: 18px;
   background-color: transparent;
-  padding:5px;
+  padding: 5px;
   transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
